--- a/cdod/cdod.csproj
+++ b/cdod/cdod.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.57.0.2727" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.11.1" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.11.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
