Edited updates many everyone and started work with jwt authetification

--- a/cdod/appsettings.json
+++ b/cdod/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Host=localhost;Port=5432;Database=cdod.db;Username=postgres;Password=georgiy33"
+    "default": "Host=localhost;Port=5432;Database=cdod_db;Username=postgres;Password=root"
+  },
+  // Для авторизации 
+  "TokenSettings": {
+    "Issuer": "localhost:7094",
+    "Audience": "API",
+    "Key": "SomethingSuperSecret"
   }
 }
