I fix jambs for Ivan

--- a/cdod/appsettings.json
+++ b/cdod/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Host=localhost;Port=5432;Database=cdod_db;Username=postgres;Password=root"
+    "default": "Host=localhost;Port=5432;Database=cdod.db;Username=postgres;Password=georgiy33"
   },
   // Для авторизации 
   "TokenSettings": {
