--- a/cdod/cdod.csproj
+++ b/cdod/cdod.csproj
@@ -10,7 +10,9 @@
     <PackageReference Include="Google.Apis.Forms.v1" Version="1.57.0.2644" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.57.0.2727" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.11.1" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.12.1" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.11.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
       <PrivateAssets>all</PrivateAssets>
