--- a/cdod/cdod.csproj
+++ b/cdod/cdod.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.21.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="StaticFiles\Contracts\" />
+  </ItemGroup>
+
 </Project>
