--- a/cdod/cdod.csproj
+++ b/cdod/cdod.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Google.Apis.Forms.v1" Version="1.57.0.2644" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.57.0.2727" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.11.1" />
