--- a/cdod/appsettings.json
+++ b/cdod/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Host=localhost;Port=5432;Database=cdod.db;Username=postgres;Password=georgiy33"
+    "default": "Host=172.16.10.1;Port=5433;Database=cdod_db;Username=postgres;Password=GoijF234bnjk84b"
   },
   // Для авторизации 
   "TokenSettings": {
