Docker configuration (attempt 2)

--- a/cdod/appsettings.Development.json
+++ b/cdod/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "default": "Host=172.16.10.1;Port=5433;Database=cdod_db;Username=postgres;Password=GoijF234bnjk84b"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
