--- a/cdod/appsettings.Development.json
+++ b/cdod/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "default": "Host=localhost;Port=5432;Database=cdod.db;Username=postgres;Password=55131"
+    "default": "Host=localhost;Port=5432;Database=cdod.db;Username=postgres;Password=georgiy33"
   },
   "Logging": {
     "LogLevel": {
