--- a/cdod/appsettings.Development.json
+++ b/cdod/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "default": "Host=localhost;Port=5432;Database=cdod.db;Username=postgres;Password=georgiy33"
+    "default": "Host=172.16.10.1;Port=5433;Database=cdod_db;Username=postgres;Password=GoijF234bnjk84b"
   },
   "Logging": {
     "LogLevel": {
